--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,3 +24,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: npm run build --if-present
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload files
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          server: spzroenkhausen.bplaced.net
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          local-dir: ./build/
+          server-dir: ./www/
