--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -34,7 +34,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: spzroenkhausen.bplaced.net
-          username: ${{ secrets.FTP_USERNAME }}
+          username: spzroenkhausen_admin
           password: ${{ secrets.FPT_PASSWORD }}
           local-dir: ./build/
           server-dir: ./www/
