--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
         
-      - name: Upload files
+      - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: spzroenkhausen.bplaced.net
@@ -33,3 +33,11 @@ jobs:
           password: ${{ secrets.FPT_PASSWORD }}
           local-dir: ./build/
           server-dir: ./www/
+      - name: Upload API files
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          server: spzroenkhausen.bplaced.net
+          username: spzroenkhausen_admin
+          password: ${{ secrets.FPT_PASSWORD }}
+          local-dir: ./api/
+          server-dir: ./www/api/
