--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/webpack": "^5.28.0",
     "assert": "^2.0.0",
+    "bufferutil": "^4.0.6",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "node-notifier": "^10.0.1",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
     "universal-cookie": "^4.0.4",
+    "utf-8-validate": "^5.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
