--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
+    "svgo": "^2.8.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
     "universal-cookie": "^4.0.4",
