--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@types/webpack": "^5.28.0",
     "assert": "^2.0.0",
     "bufferutil": "^4.0.6",
+    "chart.js": "^3.8.2",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "node-notifier": "^10.0.1",
     "node-sass": "^7.0.1",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
     "styled-components": "^5.3.5",
