--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,9 +2,8 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    tags:
+      -'*'
     
 jobs:
   build:
@@ -13,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [15.x]
       
     steps:
       - uses: actions/checkout@v3
@@ -24,3 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: npm run build --if-present
+        
+      - name: Upload Website files
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        with:
+          server: spzroenkhausen.bplaced.net
+          username: spzroenkhausen_admin
+          password: ${{ secrets.FPT_PASSWORD }}
+          local-dir: ./build/
+          server-dir: ./www/
