--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -5,6 +5,8 @@ on:
     tags:
       -'v[0-9]+\.[0-9]+\.[0-9]+'
   push:
+    branches:
+      - master
     tags:
       -'v[0-9]+\.[0-9]+\.[0-9]+'
     
