--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,9 +1,6 @@
-name: Node.js CI
+name: Publish
 
 on:
-  create:
-    tags:
-      -'v[0-9]+\.[0-9]+\.[0-9]+'
   push:
     tags:
       -'v[0-9]+\.[0-9]+\.[0-9]+'
