--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [15.x,16.x,18.x,19.x]
+        node-version: [18.x,19.x]
       
     steps:
       - uses: actions/checkout@v3
@@ -25,7 +25,7 @@ jobs:
       - run: npm run build --if-present
         
       - name: Upload Website files
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
           server: spzroenkhausen.bplaced.net
           username: spzroenkhausen_admin
