--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
       "Type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "spzroenkhausen.bplaced.net",
   "display": "fullscreen",
   "theme_color": "#282c34",
   "background_color": "#ffffff"
