--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         node-version: [19.x]
-      
+    if: github.event.ref_type == 'tag'
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
