--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && sudo cp -r ./build/* /var/www/html/"
   },
   "eslintConfig": {
     "extends": [
