bugfixes, minor design change

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,7 @@
     }
   ],
   "start_url": "/",
+  "scope": "/",
   "display": "fullscreen",
   "theme_color": "#282c34",
   "background_color": "#243b26"
