--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "https": "^1.0.0",
     "node-notifier": "^10.0.1",
     "node-sass": "^8.0.0",
+    "preval.macro": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
     "styled-components": "^5.3.9",
