--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "chrome >= 93"
     ],
     "development": [
       "last 1 chrome version",
