--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.2.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "js-sha256": "^0.9.0",
     "node-notifier": "^10.0.1",
     "node-sass": "^8.0.0",
     "preval.macro": "^5.0.0",
@@ -29,7 +30,8 @@
     "typescript": "^4.9.5",
     "universal-cookie": "^4.0.4",
     "utf-8-validate": "^6.0.3",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.3.1",
+    "which": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "crypto": false
   }
 }
