--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -3,7 +3,7 @@ name: Dev Upload
 on:
   workflow_dispatch:
   schedule:
-    - cron: '41 9 */2 * *'
+    - cron: '30 */12 * * *'
     
 jobs:
   build:
