--- a/package.json
+++ b/package.json
@@ -62,5 +62,9 @@
   },
   "browser": {
     "crypto": false
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.38.0",
+    "@types/node": "^20.6.1"
   }
 }
