--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -7,9 +7,7 @@ on:
     
 jobs:
   build:
-    
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
         node-version: [20.x]
@@ -40,7 +38,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: npm run build --if-present
-        
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
@@ -49,3 +50,24 @@ jobs:
           password: ${{ secrets.FPT_PASSWORD }}
           local-dir: ./build/
           server-dir: ./www/alpha/
+  test:
+    needs: deploy
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
