--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -6,7 +6,7 @@ on:
     - cron: '30 */12 * * *'
     
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -38,10 +38,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: npm run build --if-present
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
@@ -51,7 +47,7 @@ jobs:
           local-dir: ./build/
           server-dir: ./www/alpha/
   test:
-    needs: deploy
+    needs: build-deploy
     timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
