--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -2,6 +2,7 @@ name: Dev Upload
 
 on:
   workflow_dispatch:
+  workflow_call:
   schedule:
     - cron: '30 */12 * * *'
     
@@ -46,24 +47,3 @@ jobs:
           password: ${{ secrets.FPT_PASSWORD }}
           local-dir: ./build/
           server-dir: ./www/alpha/
-  test:
-    needs: build-deploy
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
