--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "universal-cookie": "^6.1.1",
+    "use-state-with-callback": "^3.0.2",
     "utf-8-validate": "^6.0.3",
     "web-vitals": "^3.5.0",
     "which": "^4.0.0"
