--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "https": "^1.0.0",
     "js-sha256": "^0.10.1",
     "node-notifier": "^10.0.1",
-    "node-sass": "^9.0.0",
     "preval.macro": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -66,6 +65,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
-    "@types/node": "^20.9.1"
+    "@types/node": "^20.9.1",
+    "sass": "^1.69.5"
   }
 }
