--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
     "@types/webpack": "^5.28.5",
-    "assert": "^2.1.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "browserslist": "^4.22.2",
-    "bufferutil": "^4.0.8",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chart.js": "^4.4.1",
@@ -32,11 +28,7 @@
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
-    "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "js-sha256": "^0.10.1",
     "mini-css-extract-plugin": "^2.4.5",
@@ -45,9 +37,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "preval.macro": "^5.0.0",
-    "prompts": "^2.4.2",
+    "postcss-preset-env": "^9.3.0",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-chartjs-2": "^5.2.0",
@@ -55,28 +45,19 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-refresh": "^0.14.0",
-    "react-router-dom": "^6.21.1",
     "resolve": "^1.22.8",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
+    "sass-loader": "^13.3.3",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
-    "stream": "^0.0.2",
     "style-loader": "^3.3.1",
     "styled-components": "^6.1.6",
-    "svgo": "^3.1.0",
-    "tailwindcss": "^3.4.0",
     "terser-webpack-plugin": "^5.3.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5",
-    "universal-cookie": "^6.1.1",
     "use-state-with-callback": "^3.0.2",
-    "utf-8-validate": "^6.0.3",
     "web-vitals": "^3.5.1",
     "webpack": "^5.89.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^4.0.2",
-    "which": "^4.0.0",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
@@ -110,8 +91,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/node": "^20.10.5",
-    "sass": "^1.69.6"
+    "@types/node": "^20.10.5"
   },
   "jest": {
     "roots": [
