--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - run: npm run build --if-present
+        env:
+          REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
         
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
