--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "^7.23.7",
+    "@babel/runtime": "^7.23.7",
     "@maptiler/client": "^1.8.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@svgr/webpack": "^8.1.0",
@@ -37,6 +38,7 @@
     "postcss-loader": "^7.3.4",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^9.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-chartjs-2": "^5.2.0",
@@ -57,6 +59,11 @@
     "webpack": "^5.89.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^5.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "scripts": {
