--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -10,8 +10,8 @@ on:
     - cron: '30 */12 * * *'
     
 jobs:
-  build-deploy:
-    runs-on: [self-hosted, linux, ARM64]
+  build:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [20.x]
@@ -44,6 +44,24 @@ jobs:
       - run: npm run build --if-present
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+      - name: Deploy to RPI
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SCP_HOST }}
+          username: ${{ secrets.SCP_USER }}
+          password: ${{ secrets.SCP_PASSWORD }}
+          port: 22
+          source: "./build/"
+          target: "/home/pog/deploy/"
+          rm: true
+  deploy:
+    runs-on: raspberrypi
+    needs: build
+    container: 
+      image: node:20
+      volumes:
+        - /home/pog/deploy:/build/
+    steps:
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
