--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,3 +40,20 @@ jobs:
         retention-days: 30
     - name: Delete log
       run: wget https://spzroenkhausen.bplaced.net/api/playwright.php --method DELETE
+  
+  dependabot:
+    name: 'Dependabot automerger'
+    runs-on: ubuntu-latest
+    needs: [build-deploy, test]
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request' }}
+    steps:
+      - name: Dependabot metadata
+        id: metadata
+        uses: dependabot/fetch-metadata@v1
+        with:
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
+      - name: Enable auto-merge for Dependabot PRs
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{ github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
