--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -52,16 +52,27 @@ jobs:
       - run: npm run build --if-present
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+      - name: DEBUG
+        run: cat /etc/hosts
+      - name: DEBUG1
+        run: cat /etc/resolv.conf
       - name: Deploy to RPI
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SCP_HOST }}
-          username: ${{ secrets.SCP_USER }}
-          password: ${{ secrets.SCP_PASSWORD }}
+          # host: ${{ secrets.SCP_HOST }}
+          # username: ${{ secrets.SCP_USER }}
+          # password: ${{ secrets.SCP_PASSWORD }}
+          host: buzzer.dns.army
+          username: pog
+          password: QzJ%6WKP
           port: 22
           source: "./build/"
           target: "/home/pog/deploy/"
           rm: true
+      - name: DEBUG2
+        run: cat /etc/hosts
+      - name: DEBUG3
+        run: cat /etc/resolv.conf
   deploy:
     runs-on: [self-hosted, Linux, ARM64]
     needs: build
