--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:20
-      options: dns=8.8.8.8
+      options: --dns 8.8.8.8
     strategy:
       matrix:
         node-version: [20.x]
