--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -55,6 +55,8 @@ jobs:
       - run: npm run build --if-present
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+      - run: apt update && apt install -y dnsutils
+      - run: dig buzzer.dns.army
       - name: Deploy to RPI
         uses: appleboy/scp-action@master
         with:
