--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -56,11 +56,11 @@ jobs:
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
       - run: apt update && apt install -y dnsutils
-      - run: dig buzzer.dns.army
+      - run: echo "RPI_IP=$(dig ${{ secrets.SCP_HOST}} | grep ^${{ secrets.SCP_HOST}} | grep -oP '\d+\.\d+\.\d+\.\d+')" >> $GITHUB_ENV
       - name: Deploy to RPI
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.SCP_HOST }}
+          host: ${{ env.RPI_IP }}
           username: ${{ secrets.SCP_USER }}
           password: ${{ secrets.SCP_PASSWORD }}
           port: 22
