--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -3,6 +3,12 @@ name: Dev Upload
 on:
   workflow_dispatch:
   workflow_call:
+    inputs:
+      branch:
+        description: 'Branch to deploy'
+        required: false
+        default: 'master'
+        type: string
     secrets:
       FPT_PASSWORD:
         required: true
@@ -28,6 +34,8 @@ jobs:
         node-version: [20.x]
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.branch }}
       - name: Alter package.json
         uses: jossef/action-set-json-field@v2.1
         with:
