--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -33,9 +33,10 @@ jobs:
       matrix:
         node-version: [20.x]
     steps:
+      - run: echo "Deploying ${{ inputs.branch }} to RPI"
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ inputs.branch }}
       - name: Alter package.json
         uses: jossef/action-set-json-field@v2.1
         with:
