--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "short_name": "Planer",
   "name": "SPZ/TCD Planer",
   "id": "/",
-  "version": "0.12.0",
+  "version": "v0.13.2",
   "icons": [
     {
       "src": "favicon.ico",
