fix to run Tests on PR instead of the master branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   build-deploy:
     uses: tritolium/spz_planner/.github/workflows/dev_upload.yml@master
+    with:
+      branch: ${{ github.event.pull_request.head.ref }}
     secrets: 
       FPT_PASSWORD: ${{ secrets.FPT_PASSWORD }}
       SCP_HOST: ${{ secrets.SCP_HOST }}
@@ -27,8 +29,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.sha }}
     - uses: actions/setup-node@v4
       with:
         node-version: 20
