--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -66,6 +66,7 @@ jobs:
       - run: npm run build --if-present
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+          REACT_APP_SERVICE_CELL: ${{ secrets.SERVICE_CELL }}
       - name: Deploy to RPI
         uses: appleboy/scp-action@v0.1.7
         with:
