--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -25,6 +25,7 @@ jobs:
       - run: npm run build --if-present
         env:
           REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+          REACT_APP_SERVICE_CELL: ${{ secrets.SERVICE_CELL }}
         
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
