--- a/package.json
+++ b/package.json
@@ -2,83 +2,40 @@
   "name": "spz_planner",
   "version": "0.16.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/runtime": "^7.26.0",
-    "@maptiler/client": "^2.2.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@types/webpack": "^5.28.5",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.2.1",
-    "babel-plugin-named-asset-import": "^0.3.8",
-    "bfj": "^9.1.2",
-    "camelcase": "^8.0.0",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "chart.js": "^4.4.7",
-    "css-loader": "^7.1.2",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "dotenv": "^16.4.7",
-    "dotenv-expand": "^12.0.1",
-    "eslint": "^8.57.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^4.2.0",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^11.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "jest": "^29.7.0",
-    "jest-watch-typeahead": "^2.2.2",
+    "@maptiler/client": "^1.8.1",
+    "chart.js": "^4.4.2",
+    "dotenv": "^16.4.5",
     "js-sha256": "^0.11.0",
-    "mini-css-extract-plugin": "^2.9.2",
-    "node-notifier": "^10.0.1",
-    "postcss": "^8.5.1",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^8.1.1",
-    "postcss-normalize": "^13.0.1",
-    "postcss-preset-env": "^10.1.2",
+    "mini-css-extract-plugin": "^2.8.1",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-app-polyfill": "^3.0.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-refresh": "^0.16.0",
-    "resolve": "^1.22.8",
-    "resolve-url-loader": "^5.0.0",
-    "sass-loader": "^16.0.4",
-    "semver": "^7.6.3",
-    "source-map-loader": "^5.0.0",
-    "style-loader": "^4.0.0",
-    "styled-components": "^6.1.13",
-    "terser-webpack-plugin": "^5.3.11",
-    "use-state-with-callback": "^3.0.2",
-    "web-vitals": "^4.2.4",
-    "webpack": "^5.97.1",
-    "webpack-dev-server": "^5.1.0",
-    "webpack-manifest-plugin": "^5.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-webpack-plugin": "^7.3.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "use-state-with-callback": "^3.0.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "deploy": "node scripts/build.js && sudo cp -r ./build/* /var/www/html/",
-    "remote-deploy": "node scripts/build.js && scp -r ./build/* pi@buzzer.dns.army:/home/pi/build/ && ssh pi@buzzer.dns.army 'sudo cp -r -u /home/pi/build/* /var/www/html/'",
+    "start": "webpack-dev-server ./src",
+    "build": "webpack ./src",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "node scripts/publish.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "process": "^0.11.10",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "browserslist": {
     "production": [
@@ -94,69 +51,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "browser": {
-    "crypto": false
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.49.1",
-    "@types/node": "^22.10.6"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
