--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@maptiler/client": "^1.8.1",
+    "@playwright/test": "^1.49.1",
     "chart.js": "^4.4.2",
     "dotenv": "^16.4.5",
     "js-sha256": "^0.11.0",
