--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -65,8 +65,9 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
         env:
-          REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+          MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
           REACT_APP_SERVICE_CELL: ${{ secrets.SERVICE_CELL }}
+          NODE_ENV: production
       - name: Deploy to RPI
         uses: appleboy/scp-action@v0.1.7
         with:
