--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,8 +24,8 @@ jobs:
         run: npm ci
       - run: npm run build --if-present
         env:
-          REACT_APP_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
-          REACT_APP_SERVICE_CELL: ${{ secrets.SERVICE_CELL }}
+          VITE_MAPTILER_API_KEY: ${{ secrets.MAPTILER_API_KEY }}
+          VITE_SERVICE_CELL: ${{ secrets.SERVICE_CELL }}
         
       - name: Upload Website files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
