--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "crypto": false
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "@playwright/test": "^1.51.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -55,6 +57,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
     "vite": "^6.2.4",
