--- a/.github/workflows/dev_upload.yml
+++ b/.github/workflows/dev_upload.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:22
-      options: --dns 8.8.8.8 --network host
+      options: --dns 8.8.8.8
     strategy:
       matrix:
         node-version: [20.x]
